# interview-orchestrator

./: .env.example  .gitignore  LICENSE  Makefile  README.md  alembic.ini  complete_fix.sh  main.py  pyproject.toml
alembic/: env.py
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  candidates.py  companies.py  health.py  users.py
app/core/: config.py  database.py  exceptions.py  security.py
app/models/: __init__.py  base.py  candidate.py  company.py  job.py  user.py
app/schemas/: candidate.py  common.py  company.py  user.py
docker/: Dockerfile  docker-compose.yml
scripts/: create_migration.py  init_db.py  run_migrations.py
